@@ -2,6 +2,7 @@ Back In Time
 
 Version 1.5.3-dev (development of upcoming release)
 * Breaking Change: Minimal Python version 3.9 required (#1731)
+* Breaking Change: Auto migration of config version 4 or lower not longer supported
 * Fix: Prevent duplicates in Exclude/Include list of Manage Profiles dialog
 * Fix: Fix Qt segmentation fault when canceling out of unconfigured BiT (#1095) (Derek Veit @DerekVeit)
 * Fix: Correct global flock fallbacks (#1834) (Timothy Southwick @NickNackGus)
